UP-267 book menu on mobile fixes

--- a/src/css/viewer.css
+++ b/src/css/viewer.css
@@ -776,6 +776,7 @@ ul.nav-tabs li:not(.active) button:hover
     height: 24px;
     padding: 0;
   }
+  #readerCurrentClassContainer,
   .navbar .btn-group > .btn.icon-full-screen
   {
     display:none;
@@ -788,6 +789,9 @@ ul.nav-tabs li:not(.active) button:hover
   .page-switch-overlay-icon
   {
       font-size: 30px;
+  }
+  #reading-area {
+    top: 55px
   }
 }
 
